feat: add attendance tracking via QR code validation
- Add participantId field to Ticket to link ticket to its owner
- Add participantId to CreateTicketRequestDTO
- Add marcarPresencaPorId method to ParticipantService
- Update TicketService to mark participant as PRESENT on QR validation
- Standardize all ParticipantController endpoints to return ParticipantResponseDTO
- Restrict POST /tickets and POST /tickets/validar to ADMIN role

Signed-off-by: HemannB <brunohemann@gmail.com>